--- a/movies/templates/movies/add_movie.html
+++ b/movies/templates/movies/add_movie.html
@@ -1,6 +1,10 @@
 {% extends 'movies/base.html' %}
 {% load bootstrap4 %}
 
+{% block title %}
+<title>Add Movie</title>
+{% endblock title %}
+
 {% block page_header %}
   <h2>Add Movie</h2>
 {% endblock page_header %}
