--- a/movies/templates/movies/trophies.html
+++ b/movies/templates/movies/trophies.html
@@ -2,13 +2,17 @@
 {% load bootstrap4 %}
 {% load static %}
 
+{% block title %}
+<title>Trophies</title>
+{% endblock title %}
+
 {% block page_header %}
   <h2>Trophies</h2>
 {% endblock page_header %}
 
 {% block content %}
   <br>
-
+  <p>Trophy data will be posted after the current Round has been completed.</p>
 
 
 
