--- a/movies/templates/movies/base.html
+++ b/movies/templates/movies/base.html
@@ -32,7 +32,7 @@
       <nav class="nav nav-masthead justify-content-center">
         {% with url_name=request.resolver_match.url_name %}
           <a class="nav-link {% if url_name == 'index' %} active {% endif %}" href="{% url 'movies:index' %}">Home</a>
-          <a class="nav-link {% if url_name == 'member' %} active {% endif %}" href="#">Members</a>
+          <a class="nav-link {% if url_name == 'members' %} active {% endif %}" href="{% url 'movies:members' %}">Members</a>
           <a class="nav-link {% if url_name == 'trophies' %}  active {% endif %}" href="{% url 'movies:trophies' %}">Trophies</a>
           <a class="nav-link {% if url_name == 'add_movie' %} active {% endif %}" href="{% url 'movies:add_movie' %}">Add Movie</a>
         {% endwith %}
@@ -41,8 +41,18 @@
   </header>
 
   <main role="main" class="">
+
+    <div class="mb-2">
+      {% if not user.is_authenticated %}
+        <a class="btn-mmg float-right" href="{% url 'login' %}?next={{ request.path|urlencode }}" role="button">login</a>
+      {% else %}
+        <a class="btn-mmg float-right" href="{% url 'logout' %}?next={{ request.path|urlencode }}" role="button">logout&nbsp;<small>{{ user.username }}</small></a>
+      {% endif %}
+    </div>
+
+    <br>  <!-- login button will replace this break, eventually -->
+    
     <div class="border-bottom">
-      <br>
       {% block page_header %}{% endblock page_header %}
     </div>
 
