--- a/movies/templates/movies/index.html
+++ b/movies/templates/movies/index.html
@@ -5,16 +5,23 @@
 <title>Mystery Movie Group</title>
 {% endblock title %}
 
+
+<p>Members, please <a href="{% url 'login' %}">login</a> here.</p>
+<p>Need an account? <a href="{% url 'register' %}">Register</a> here.</p>
+
 {% block page_header %}
-  <h2>{{ date_today|date:'M d, Y' }}</h2>
+  <h2>Round 1 <span style="font-size:16px">Oct 4 - Nov 6, 2020</span></h2>
 {% endblock page_header %}
 
+<p>Today's Date: {{ date_today|date:'M d, Y' }}
 
 {% block content %}
 <br>
 
+
 {% for movie in movies %}
-  <b>{{ movie.date_watched|date:'M d, Y' }}</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="{{ movie.get_absolute_url }}">{{ movie.name }}</a><br>
+  <b>{{ movie.date_watched|date:'M d, Y' }}</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="{{ movie.get_absolute_url }}">{{ movie.name }}</a>
+  <br>
 {% empty %}
   <p class="text-center">There are currently no movies in the database.</p>
 {% endfor %}
