--- a/users/templates/registration/register.html
+++ b/users/templates/registration/register.html
@@ -6,7 +6,7 @@
 {% endblock title %}
 
 {% block page_header %}
-  <h2>Register Account</h2>
+  <h2>Create Account</h2>
 {% endblock page_header %}
 
 
