added Round table

--- a/movies/templates/movies/index.html
+++ b/movies/templates/movies/index.html
@@ -35,6 +35,8 @@
 {% endfor %}
 </ul>
 
+<a href="{% url 'movies:add_movie' %}"><span class="float-right"><b>+ Add Movie</b></span></a>
+
 <br>
 <br>
 
