--- a/movies/templates/movies/members.html
+++ b/movies/templates/movies/members.html
@@ -33,6 +33,14 @@ If you have an account, click login above.</p>
 {% endfor %}
 </ul>
 
+<br>
+<br>
+<div class="border-bottom">
+  <h2>Round 1: Results</h2>
+</div>
+<br>
+<p>The complete scoring results will be posted after the Round is complete.</p>
+
 
 {% endif %}
 
