--- a/movies/templates/movies/base.html
+++ b/movies/templates/movies/base.html
@@ -34,7 +34,7 @@
           <a class="nav-link {% if url_name == 'index' %} active {% endif %}" href="{% url 'movies:index' %}">Home</a>
           <a class="nav-link {% if url_name == 'members' %} active {% endif %}" href="{% url 'movies:members' %}">Members</a>
           <a class="nav-link {% if url_name == 'trophies' %}  active {% endif %}" href="{% url 'movies:trophies' %}">Trophies</a>
-          <a class="nav-link {% if url_name == 'add_movie' %} active {% endif %}" href="{% url 'movies:add_movie' %}">Add Movie</a>
+          <a class="nav-link {% if url_name == 'results' %} active {% endif %}" href="{% url 'movies:results' %}">Results</a>
         {% endwith %}
       </nav>
     </div>
