--- a/movies/templates/movies/movie.html
+++ b/movies/templates/movies/movie.html
@@ -41,11 +41,11 @@
   <ul class="pl-0" style="list-style-type:none">
       <li>Seen Previously: <span class="float-right">{{ user_movie_details.get_seen_previously_display }}</span></li>
       <li>Heard of Before: <span class="float-right">{{ user_movie_details.get_heard_of_display }}</span></li>
-      <li>Deep Hurting Level: <span class="float-right">{{ user_movie_details.get_star_rating_display }}</span></li>
-    
     {% if not user_movie_details.is_user_movie %}
-      <li>Your Guess: <span class="float-right">{{ user_movie_details.user_guess.username }}</span></li>
+      <li>Your User Guess: <span class="float-right">{{ user_movie_details.user_guess.username }}</span></li>
     {% endif %}
+      <br>
+      <li>Deep Hurting Score: <span class="float-right">{{ user_movie_details.get_star_rating_display }}</span></li>
 
 <!--     {% if user_movie_details.comments %}
       <li>Your Comments: <span class="float-right">{{ user_movie_details.comments }}</span></li>
