--- a/movies/templates/movies/members.html
+++ b/movies/templates/movies/members.html
@@ -7,39 +7,52 @@
 
 
 {% block page_header %}
-  <h2>Current Members</h2>
+  <h2>Current Club Members</h2>
 {% endblock page_header %}
 
 
 {% block content %}
 
-<br>
-
 {% if not user.is_authenticated %}
-<p>Looks like you're new here...<br>
-If you have an account, click login above.</p>
+  <p>Looks like you're new here...<br>
+  If you have an account, click login above.</p>
 
-<p>Otherwise, please <a href="{% url 'register' %}"><b>register</b></a> here.</p>
+  <p>Otherwise, please <a href="{% url 'register' %}"><b>register</b></a> here.</p>
 
 {% else %}
 
-<p>There are currently <b>{{ members|length }}</b> members.</p>
+  {% if members|length == 1 %}
+    <p>There is currently {{ members|length }} member.</p>
+  {% else %}
+    <p>There are currently <b>{{ members|length }}</b> members.</p>
+  {% endif %}
 
-<ul class="pl-0" style="list-style-type:none">
-{% for pair in user_profile_pairs %}
-  <li>{{ pair.0.username }}<span class="float-right">{{ pair.1.total_points }} points</span></li>
-{% empty %}
-  <p>There are currently no members in the database.</p>
-{% endfor %}
-</ul>
+  <ul class="pl-0" style="list-style-type:none">
+  {% for pair in user_profile_pairs %}
+    <li>{{ pair.0.username }}<span class="float-right">{{ pair.1.total_points }} points</span></li>
+  {% empty %}
+    <p>There are currently no members in the database.</p>
+  {% endfor %}
+  </ul>
 
-<br>
-<br>
-<div class="border-bottom">
-  <h2>Round 1: Results</h2>
-</div>
-<br>
-<p>The complete scoring results will be posted after the Round is complete.</p>
+<!--   <br>
+  <br>
+
+  {% if current_round %}
+    <h2 class="border-bottom pb-2 mb-4">Round {{ current_round.round_number }} Participants</h2>
+    <p>The current round has {{ current_round_pairs|length }} participants.</p>
+
+    <ul class="pl-0" style="list-style-type:none">
+    {% for pair in current_round_pairs %}
+      <li>{{ pair.0.username }}<span class="float-right">{{ pair.1.total_points }} points</span></li>
+    {% empty %}
+      <li>The current round has no Participants.</li>
+    {% endfor %}
+    </ul>
+  
+  {% else %}
+    <p>There is no currently active Round.</p>
+  {% endif %} -->
 
 
 {% endif %}
