--- a/movies/templates/movies/index.html
+++ b/movies/templates/movies/index.html
@@ -40,10 +40,10 @@
 
 <a href="{% url 'movies:add_movie' %}"><span class="float-right"><b>+ Add Movie</b></span></a>
 <br>
-
-<i>Instructions:</i>
-<p>Click on a Movie title to update your details.</p>
 <br>
+<!-- <i>Instructions:</i>
+<p>Click on a Movie title to update your details.</p>
+<br> -->
 
 <h4 class="border-bottom pb-2 mb-4">Players</h4>
 
