--- a/movies/templates/movies/movie.html
+++ b/movies/templates/movies/movie.html
@@ -67,8 +67,8 @@
         </div>
         <br>
     {% else %}
-    <br>
-    <p>Your results for this movie will be posted after the Round is complete.</p>
+<!--     <br>
+    <p>Your results for this movie will be posted after the Round is complete.</p> -->
     {% endif %}
 
 {% endif %}
