--- a/movies/templates/movies/index.html
+++ b/movies/templates/movies/index.html
@@ -41,6 +41,7 @@
 <a href="{% url 'movies:add_movie' %}"><span class="float-right"><b>+ Add Movie</b></span></a>
 <br>
 <br>
+
 <!-- <i>Instructions:</i>
 <p>Click on a Movie title to update your details.</p>
 <br> -->
@@ -62,3 +63,6 @@
 
 
 {% endblock content %}
+
+
+<!-- <span class="float-right" style="font-size:16px;">Date Watched</span> -->
