--- a/movies/templates/movies/members.html
+++ b/movies/templates/movies/members.html
@@ -27,9 +27,13 @@
     <p>There are currently <b>{{ members|length }}</b> members.</p>
   {% endif %}
 
+<h5 class="border-bottom mb-2">Name<span class="float-right"># Rounds Won</span></h5>
+
   <ul class="pl-0" style="list-style-type:none">
   {% for pair in user_profile_pairs %}
-    <li>{{ pair.0.username }}<span class="float-right">{{ pair.1.total_points }} points</span></li>
+    <li>{{ pair.0.username }}
+    <span class="float-right"> {{ pair.1.rounds_won }} </span>
+    </li>
   {% empty %}
     <p>There are currently no members in the database.</p>
   {% endfor %}
@@ -39,3 +43,5 @@
 {% endif %}
 
 {% endblock content %}
+
+
