--- a/movies/templates/movies/index.html
+++ b/movies/templates/movies/index.html
@@ -46,7 +46,7 @@
 <p>Click on a Movie title to update your details.</p>
 <br> -->
 
-<h4 class="border-bottom pb-2 mb-4">Players</h4>
+<h4 class="border-bottom pb-2 mb-4">Participants</h4>
 
 <ul class="pl-0" style="list-style-type:none">
 {% for pair in current_round_pairs %}
