--- a/movies/templates/movies/results.html
+++ b/movies/templates/movies/results.html
@@ -37,37 +37,48 @@
         <li><b>{{ movie_name }}</b></li>
           <ul class="pl-4" style="list-style-type:none">
             <li>Details Received:<span class="float-right">
-            {% for user in status.submitted %}
-              &nbsp;<small>{{ user.username }}</small>
+            {% for participant in status.submitted %}
+              &nbsp;<small>{{ participant.username }}</small>
             {% empty %}
-              n/a
+              <small>none</small>
             {% endfor %}
             </span></li>
         
             <li>Need details From:<span class="float-right">
-            {% for user in status.incomplete %}
-              &nbsp;<small>{{ user.username }}</small>
+            {% for participant in status.incomplete %}
+              &nbsp;<small>{{ participant.username }}</small>
             {% empty %}
-              n/a
+              <small>n/a</small>
             {% endfor %}
             </span></li>
           </ul>
       <br>
       {% endfor %}
       </ul>
+
+      {% if ready_to_conclude %}
+        {% if user.userprofile.is_mmg_admin %}
+        <p>Admin: <span class="float-right"><a href="{% url 'movies:conclude_round' current_round.pk %}"><b>Conclude Round</b></a></span></p>
+        {% else %}
+        <p>Round is ready to be Concluded by Admin.</p>
+        {% endif %}
+      {% endif %}
   
   {% else %}
     <p>The current round has concluded. Here are the results...</p>
 
     <p>Display results here...</p>
-
+  {% endif %}
 
 {% else %}
   <p>There is no currently active round.</p>
 {% endif %}
 
+<br>
+<p class="float-right"><a href="{% url 'movies:old_rounds' %}">Previous Rounds...</a></p>
 
-<p class="border-bottom mb-2">Links to Results of Previous Rounds</p>
+<!-- <br>
+<p class="border-bottom mb-2">Links to Results of Previous Rounds</p> -->
 
 <!-- loop through old rounds here, each one printing as a link to old_rounds url -->
 
@@ -80,10 +91,35 @@
     attributes, which would be bad: what if a user joins 'in progress': adding them would reset
     all other users..... -->
 
-<!-- Here in Results, and/or in Admin Panel page, do this:
 
-    Movie Title
-    The following users have submitted their details for this movie:   username, username...
-    The following users still need to submit their details for this movie:   username, username...
+<!-- use this for the round_concluded display, NOTE: NEEDS UPDATING TO NEW FORM OF point_queue -->
+
+    <!--  looping through the point_queue to display point results by type, per participant:
+
+
+# thing is, point queue isn't even passed to this template... you could do that, but since by this time
+# the UserRoundDetail and GameRound objects have been updated with the results of the round, it makes 
+# FAR more sense to loop through those, instead. So rewrite the below to do that, instead of accessing
+# point_queue; it will probably be much easier, since they are actual db records, rather than your
+# abstracted dict of data
+
+  {% for parp, results in point_queue.items %}
+  <p class="border-bottom">{{ parp }}</p>
+  <ul>
+    {% for point_type, points_list in results.items %}
+    <li>{{ point_type }}</li>
+      <ul>
+      {% for point_dict in points_list %}
+        <li>point_dict.point_string</li>
+      {% endfor %}
+      </ul>
+    {% endfor %}
+  </ul>
+{% endfor %}
 
 -->
+
+
+
+
+
