--- a/movies/templates/movies/index.html
+++ b/movies/templates/movies/index.html
@@ -11,7 +11,7 @@
 
 {% block page_header %}
   {% if current_round %}
-    <h2>Current Round &nbsp;-<b>&nbsp;{{ current_round.round_number }}</b></h2>
+    <h2>Current Round -<b>&nbsp;{{ current_round.round_number }}</b></h2>
   {% else %}
     <h2>There is no active Round.</h2>
   {% endif %}
