--- a/movies/templates/movies/base.html
+++ b/movies/templates/movies/base.html
@@ -46,9 +46,10 @@
 
     <div class="mb-2">
       {% if not user.is_authenticated %}
-        <a class="btn-mmg float-right" href="{% url 'login' %}?next={{ request.path|urlencode }}" role="button">login</a>
+        <!-- redirecting logged in user to previous page can screw with request.session variable, so I removed this behavior -->
+        <a class="btn-mmg float-right" href="{% url 'login' %}" role="button">login</a>
       {% else %}
-        <a class="btn-mmg float-right" href="{% url 'logout' %}?next={{ request.path|urlencode }}" role="button">logout&nbsp;<small>{{ user.username }}</small></a>
+        <a class="btn-mmg float-right" href="{% url 'logout' %}" role="button">logout&nbsp;<small>{{ user.username }}</small></a>
 
         {% if user.userprofile.is_mmg_admin %}
           <a class="btn-mmg float-left" href="{% url 'movies:settings' %}" role="button"><small>Admin Panel</small></a>
